syntax = "proto3";

option csharp_namespace = "Server";
package games;

service GameProto {
  // Sends a greeting
  rpc GetGames (GamesRequest) returns (GamesReply);
  rpc AddGame (AddGameRequest) returns (GamesReply);
  rpc DeleteGame (DeleteGameRequest) returns (GamesReply);
  rpc ModifyGame (ModifyGameRequest) returns (GamesReply);

}

// The request message containing the user's name.
message GamesRequest {
  string user = 1;
}

// The response message containing the greetings.
message GamesReply {
  string response = 1;
}

message AddGameRequest{
  string Name = 1;
  string Genre = 2 ;
  string Synopsis = 3 ;
  string PathToPhoto = 4 ;
  string OwnerUserName = 5 ;
}

message DeleteGameRequest {
  string user = 1;
  string gameToDelete = 2;
}

message ModifyGameRequest{
  string Name = 1;
  string Genre = 2 ;
  string Synopsis = 3 ;
  string PathToPhoto = 4 ;
  string OwnerUserName = 5 ;
  string GameToModify = 6;
}
